fixed layout issues on chrome mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,13 +3,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  overflow: auto;
 
   .main {
     position: relative;
     width: 100%;
     height: calc(100vh - 114px);
-    min-height: 500px;
     display: flex;
 
     .left-panel {
@@ -73,8 +71,8 @@
         position: fixed;
         top: 264px;
         left: 0;
-        height: calc(100vh - 314px);
-        width: 100vw;
+        height: calc(100% - 314px);
+        width: 100%;
         z-index: 1;
 
         &::before {
