--- a/src/app/backdrop/backdrop.component.scss
+++ b/src/app/backdrop/backdrop.component.scss
@@ -2,8 +2,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgba(128, 128, 128, 0.9);
     z-index: 10;
 }
