--- a/src/app/object-add/object-add.component.scss
+++ b/src/app/object-add/object-add.component.scss
@@ -5,12 +5,12 @@
   background-color: white;
   z-index: 11;
   transform: translate(calc(50vw - 50%), calc(50vh - 50%));
-  width: 90vw;
+  width: 90%;
   max-width: 800px;
   border-radius: 20px;
   padding: 30px;
   padding-top: 60px;
-  max-height: 90vh;
+  max-height: 90%;
   overflow: auto;
   scrollbar-gutter: stable both-edges;
 
